# Annual-report-to-MDA-txt

./: .gitignore  README.md  README2.md  README_zh-CN.md  analyze_pdf_size.py  kill_all_python3_force.fish  pyproject.toml
docs/: procedure.wsd
src/: config.py  extractor.py  llm_extractor.py  main.py  ocr_extractor.py  utils.py
src/pdf_reader/: extract_mda.py  main.py  main2.py
src/pdf_reader/Pipeline/: BatchCorruptRetry.py  ExtractUsingLlm.py  LargerRangeTrial.py  OcrProcessPdf.py  Pipeline.py  StandardProcess.py  __init__.py
src/pdf_reader/config/: __init__.py  config.py  log_config.py  schema.py
src/pdf_reader/llm/: __init__.py  extract_mda_llm.py
src/pdf_reader/ocr/: __init__.py  extract_mda_ocr.py
src/pdf_reader/raw_extract/: __init__.py  dto.py  extract.py  extract_mda.py  locate.py  save_file.py
src/pdf_reader/util/: BufferedWriter.py  SysException.py  clean_log.py  extract_util.py
tests/: config.py  test_batch_corrupt_retry.py  test_buffered_writer.py  test_llm_and_ocr.py  test_log_config.py
