[project]
name = "pdf-mda-extractor"
version = "0.1.0"
description = "Extract MDA section from Annual Reports"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pdfplumber>=0.10.0",
    "ocrmypdf>=15.0.0",
    "tqdm>=4.66.0",
    "requests>=2.31.0",
]

[tool.uv]
dev-dependencies = []
